--- a/src/styles/DamageApplication.css
+++ b/src/styles/DamageApplication.css
@@ -783,7 +783,9 @@
 }
 
 .damage-value {
-  font-weight: 600;
+  font-weight: 700;
+  color: #e53e3e;
+  font-size: 1.1em;
 }
 
 .damage-adjustment {
@@ -1600,4 +1602,11 @@
     width: 45px;
     min-width: 45px;
   }
+}
+
+/* Style for damage details (modifiers, adjustments) */
+.damage-details {
+  font-size: 0.85rem;
+  color: #718096;
+  font-weight: normal;
 } 
